adjusting the spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,9 @@
         margin-top: 25px;
         margin-bottom: 0;
     }
+    p {
+       margin-bottom: 25px;
+    }
     /* center image - jumbotron*/
     .main-theme{
         background-color: #ffffff;
@@ -35,6 +38,7 @@
    }
    .img-responsive{
        width: 100%;
+       margin-bottom: 25px;
    }
     /*Aligning the images using float for the featured section */
    .col-sm-4{
@@ -74,6 +78,7 @@
           }
           .col-sm-4{
             width : 1000%;
+            margin-bottom: 25px;
           }
          
     }
@@ -97,6 +102,7 @@
           }       
           .col-sm-4{
             width : 100%;
+            margin-bottom: 25px;
           }
 
     }   
